tdf#100160 - Changing OpenCL state doesn't update sheet

now we re-check for vectorization state of formula token each time
OpenCL is enabled or disabled

Change-Id: I652397dd154f5fbf788cb511c70e53a47cc94293
Reviewed-on: https://gerrit.libreoffice.org/25727
Reviewed-by: Jan Holesovsky <kendy@collabora.com>
Tested-by: Michael Meeks <michael.meeks@collabora.com>
Reviewed-by: Michael Meeks <michael.meeks@collabora.com>
(cherry picked from commit 2534e5f046654c69173b84d040013b7e1c6c3f1e)